internal class TagAnimation
{
    #region Animation

    public static string WALK_ANIMATION_PARAMETER = "Walk";
    public static string JUMP_ANIMATION_PARAMETER = "IsJump";
    public static string ATTACK_ANIMATION_PARAMETER = "IsPunch";
    public static string ATTACK_ANIMATION_TRIGGER_PARAMETER = "Attack";

    #endregion
}